# pico_sequencer

./: .clang-tidy  CMakeLists.txt  freshbuild.sh  pico_sdk_import.cmake  rawwavtest.c
firmware/: CMakeLists.txt
firmware/include/: display.h  eeprom_24C256.h  eeprom_manager.h  main.h  midi.h  pins.h  player.h  sequence.h  string_consts.h  ui.h  ui_default.h  ui_sequence.h  utils.h
firmware/src/: display.cpp  main.cpp  midi.cpp  pins.cpp  player.cpp  sequence.cpp  ui_default.cpp  ui_sequence.cpp  utils.cpp
include/: adpcm_decoder.h  audio_player.h  audio_pwm_driver.h  constant_arr.h  display.h  main.h  midi.h  pins.h  sound_mappings.h  sounds.h  string_consts.h
src/: adpcm_decoder.cpp  audio_player.cpp  audio_pwm_driver.cpp  display.cpp  main.c  main.cpp  midi.cpp  pins.c  pins.cpp
test/: CMakeLists.txt  compile_commands.json  midi_test.cpp  seq_ser_test.cpp
test/mock/: tusb.cpp  tusb.h
test/mock/hardware/: uart.cpp  uart.h
